--- a/04.code/e4-ip/pom.xml
+++ b/04.code/e4-ip/pom.xml
@@ -204,5 +204,7 @@
   <modules>
     <module>ip-ps</module>
     <module>ip-ps-rest</module>
+    <module>ip-gv</module>
+    <module>ip-gv-rest</module>
   </modules>
 </project>
