--- a/04.code/e4-appconsole/appconsole-gv-web/pom.xml
+++ b/04.code/e4-appconsole/appconsole-gv-web/pom.xml
@@ -4,17 +4,23 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.github.effectee</groupId>
-    <artifactId>e4-ip</artifactId>
+    <artifactId>e4-appconsole</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.git.effectee</groupId>
-  <artifactId>ip-gv</artifactId>
-  <name>ip-gv</name>
+  <artifactId>appconsole-gv-web</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
+  <name>appconsole-gv-web Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <dependencies>
-
+    <dependency>
+        <groupId>com.git.effectee</groupId>
+        <artifactId>ip-gv-rest</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
+  <build>
+    <finalName>appconsole-gv-web</finalName>
+  </build>
 </project>
