--- a/04.code/e4-appconsole/pom.xml
+++ b/04.code/e4-appconsole/pom.xml
@@ -19,172 +19,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- 发布版本 -->
     <artifactId.version>1.0.0-SNAPSHOT</artifactId.version>
-    <!-- junit -->
-    <junit.version>4.11</junit.version>
-    <!-- spring -->
-    <spring.version>3.2.3.RELEASE</spring.version>
-    <!-- spring-flex -->
-    <spring.flex.version>1.5.2.RELEASE</spring.flex.version>
-    <!-- aop -->
-    <aopalliance.version>1.0</aopalliance.version>
-    <antlr.version>2.7.7</antlr.version>
-    <aspectjweaver.version>1.7.2</aspectjweaver.version>
-    <!-- hibernate -->
-    <hibernate.version>4.2.2.Final</hibernate.version>
-    <hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
-    <hibernate.annotation.version>4.0.2.Final</hibernate.annotation.version>
-    <!-- 基础工具 -->
-    <common.lang.version>3.1</common.lang.version>
-    <common.collection.version>4.0.2.Final</common.collection.version>
-    <common.beanutils.version>1.8.3</common.beanutils.version>
-    <!-- 日志 -->
-    <common.logging.version>4.0.2.Final</common.logging.version>
-    <log4j.version>4.0.2.Final</log4j.version>
-
-    <c3p0.version>0.9.1.2</c3p0.version>
-    <ojdbc.version>11.1.0.7.0</ojdbc.version>
-      <!-- mysql driver -->
-      <mysql.version>5.1.25</mysql.version>
-      
-    <servlet.version>2.5</servlet.version>
-    <jstl.version>1.2</jstl.version>
-	
-	<activiti.version>5.13</activiti.version>
-	
-	<cxf.version>1.2</cxf.version>
+    
 
 
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>${servlet.version}</version>
-<!--       <scope>provided</scope> -->
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>${jstl.version}</version>
-<!--       <scope>provided</scope> -->
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-orm</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>${hibernate.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.0-api</artifactId>
-      <version>${hibernate.jpa.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>antlr</groupId>
-      <artifactId>antlr</artifactId>
-      <version>${antlr.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>aopalliance</groupId>
-      <artifactId>aopalliance</artifactId>
-      <version>${aopalliance.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjweaver</artifactId>
-      <version>${aspectjweaver.version}</version>
-    </dependency>
-    <!-- <dependency> <groupId>org.springframework.flex</groupId> <artifactId>spring-flex-core</artifactId> 
-      <version>${spring.flex.version}</version> </dependency> -->
-
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>${common.lang.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>${common.beanutils.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>c3p0</groupId>
-      <artifactId>c3p0</artifactId>
-      <version>${c3p0.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>ojdbc6</artifactId>
-      <version>${ojdbc.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.2.1</version>
-    </dependency>
-	
-	<!--activiti -->
-	<dependency>
-  <groupId>org.activiti</groupId>
-  <artifactId>activiti-spring</artifactId>
-  <version>${activiti.version}</version>
-</dependency>
-
-<dependency>
-  <groupId>org.activiti</groupId>
-  <artifactId>activiti-engine</artifactId>
-  <version>${activiti.version}</version>
-</dependency>
-
-      <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <version>${mysql.version}</version>
-      </dependency>
+   
   </dependencies>
   
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+
   <modules>
     <module>appconsole-ps</module>
+    <module>appconsole-gv-web</module>
   </modules>
 </project>
