--- a/04.code/e4-ip/ip-gv-rest/pom.xml
+++ b/04.code/e4-ip/ip-gv-rest/pom.xml
@@ -17,10 +17,9 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+        <groupId>com.git.effectee</groupId>
+        <artifactId>ip-gv</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
