--- a/e4/pt/pom.xml
+++ b/e4/pt/pom.xml
@@ -12,10 +12,14 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+    	<groupId>com.git.e4</groupId>
+    	<artifactId>pf-core</artifactId>
+    	<version>${e4.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.git.e4</groupId>
+    	<artifactId>pf-util</artifactId>
+    	<version>${e4.version}</version>
     </dependency>
   </dependencies>
   <properties>
