--- a/e4/ps/ps-sv/pom.xml
+++ b/e4/ps/ps-sv/pom.xml
@@ -17,6 +17,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.git.e4</groupId>
+    	<artifactId>pt-da</artifactId>
+    	<version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
