--- a/e4/pf/pom.xml
+++ b/e4/pf/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>e4</artifactId>
-    <groupId>com.git.e4</groupId>
+    <groupId>com.github.e4</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>pf</artifactId>
