--- a/e4/pt/pt-da/pom.xml
+++ b/e4/pt/pt-da/pom.xml
@@ -4,14 +4,23 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>pt</artifactId>
-    <groupId>com.git.e4</groupId>
+    <groupId>com.github.e4</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>pt-da</artifactId>
   <name>pt-da</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-
+    <dependency>
+      <groupId>com.github.e4</groupId>
+      <artifactId>pf-core</artifactId>
+      <version>${e4.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.e4</groupId>
+      <artifactId>pf-util</artifactId>
+      <version>${e4.version}</version>
+    </dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
