--- a/e4/pt/pt-web/pom.xml
+++ b/e4/pt/pt-web/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>pt</artifactId>
-    <groupId>com.git.e4</groupId>
+    <groupId>com.github.e4</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>pt-web</artifactId>
